@@ -142,10 +142,30 @@ class TestUnit:
                 authstatus=["noauth", ""]))
         # use with basic authentication
         hub = cmd_devpi("use", "http://user:password@devpi/foo/bar")
-        assert hub.current.get_basic_auth() == ('user', 'password')
+        # should work with and without explicit port if it's the default port
+        assert hub.current.get_basic_auth(url="http://devpi/foo/bar") == ('user', 'password')
+        assert hub.current.get_basic_auth(url="http://devpi:80/foo/bar") == ('user', 'password')
         # now without basic authentication
         hub = cmd_devpi("use", "http://devpi/foo/bar")
-        assert hub.current.get_basic_auth() is None
+        assert hub.current.get_basic_auth(url="http://devpi/foo/bar") is None
+
+    def test_use_with_basic_auth_https(self, cmd_devpi, mock_http_api):
+        mock_http_api.set(
+            "https://devpi/foo/bar/+api", 200, result=dict(
+                pypisubmit="/post",
+                simpleindex="/index/",
+                index="foo/bar",
+                bases="root/pypi",
+                login="/+login",
+                authstatus=["noauth", ""]))
+        # use with basic authentication
+        hub = cmd_devpi("use", "https://user:password@devpi/foo/bar")
+        # should work with and without explicit port if it's the default port
+        assert hub.current.get_basic_auth(url="https://devpi/foo/bar") == ('user', 'password')
+        assert hub.current.get_basic_auth(url="https://devpi:443/foo/bar") == ('user', 'password')
+        # now without basic authentication
+        hub = cmd_devpi("use", "https://devpi/foo/bar")
+        assert hub.current.get_basic_auth(url="https://devpi/foo/bar") is None
 
     def test_change_index(self, cmd_devpi, mock_http_api):
         mock_http_api.set("http://world.com/+api", 200,
