@@ -1,6 +1,9 @@
 2.0.2
 ----------------
 
+- fix issue135: fix port mismatch for basic auth if port isn't explicitly given
+  on https urls.
+
 - fix issue144: fix interaction with requests-2.4 by depending
   on devpi-common's new support for enumerating possible Errors
 
